<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~   Copyright 2020-2021 Rosemoe
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CodeEditorSample</string>
    <string name="open_debug_logs">Open Debug Logs</string>
    <string name="layout_tv_last">Last</string>
    <string name="layout_tv_next">Next</string>
    <string name="layout_tv_replace">Replace</string>
    <string name="layout_tv_replaceAll">Replace All</string>
    <string name="text_to_search">Text to search</string>
    <string name="replacement">Replacement</string>
    <string name="cursor_actions">Cursor Actions</string>
    <string name="go_to_end">Go To End</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="text_actions">Text Actions</string>
    <string name="switch_color_scheme">Switch Color Scheme</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="search_text">Search Text</string>
    <string name="action_mode">Action Mode</string>
    <string name="search_panel">Search Panel</string>
    <string name="code_navigation">Code Navigation</string>
    <string name="switch_language">Switch Language</string>
    <string name="format">Format</string>
    <string name="code_navi">Code Navigation</string>
    <string name="navi_err_msg">Code navigation not prepared or unsupported</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="err_crash_loop">"Exception in a thread with looper. Crash log is saved to crash-journal.log in private files directory. "</string>
    <string name="wordwrap">Wordwrap</string>
    <string name="show_crash_log">Open crash log</string>
    <string name="clear_crash_log">Clear crash log</string>
    <string name="line_number_visibility">Show line number</string>
    <string name="enable_logcat_logs" tools:ignore="MissingTranslation">Enable debugging logs</string>
</resources>
