<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~   Copyright 2020-2021 Rosemoe
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoLast"
                    android:text="@string/layout_tv_last" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gotoNext"
                    android:text="@string/layout_tv_next" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replace"
                    android:text="@string/layout_tv_replace" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="replaceAll"
                    android:text="@string/layout_tv_replaceAll" />


            </LinearLayout>

        </HorizontalScrollView>


        <EditText
            android:id="@+id/search_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_search" />

        <EditText
            android:id="@+id/replace_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/replacement" />

    </LinearLayout>

    <!--
    <io.github.rosemoe.editor.core.CodeEditor
        android:id="@+id/editor"
        android:layout_width="match_parent"
        app:widget.color.wholeBackground="@color/green"
        android:layout_height="match_parent"
        android:layout_marginBottom="36dp" />
-->
    <io.github.rosemoe.editor.core.CodeEditor
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:config='
        {
            "core": {
                "tabWidth": 4,
                "textSize": 20
            },
            "extensions": {
                "color": {
                    "enabled": true,
                    "defaultColors": [
                        {"name": "accent1", "value": "#FFFF0000"},
                    ],
                },
                "linenumber": {
                    "enabled": false
                },
                "cursor": {
                    "enabled": true,
                    "blink": {
                        "period": 1000
                    }
                }
            }
        }'
        android:layout_marginBottom="36dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="-36dp">

        <io.github.rosemoe.editor.core.extension.plugins.widgets.symbolinput.view.SymbolInputView
            android:id="@+id/symbol_input"
            android:layout_width="wrap_content"
            android:layout_height="36dp" />

    </HorizontalScrollView>

</LinearLayout>
